[project]
name = "crewai-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=0.130.0",
    "crewai-tools>=0.47.1",
    "streamlit>=1.46.0",
    "langchain-groq>=0.3.2",
    "duckduckgo-search>=8.0.4",
    "langchain-huggingface>=0.3.0",
    "sentence-transformers>=4.1.0",
    "pip>=25.1.1",
    "litellm>=1.72.0",
    "langchain-openai>=0.2.14",
    "langchain-ollama>=0.3.3",
    "langchain-community>=0.3.25",
]
